--- a/styles/scss/components/_page-header.scss
+++ b/styles/scss/components/_page-header.scss
@@ -14,7 +14,9 @@
     &-small {
       display: block;
       color: $heading-1-small-color;
-      margin-top: 1em;
+      margin-top: 5em;
+      margin-bottom: 4em;
+      line-height: 1.6em;
     }
   }
 }
