--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  min-height: 100vh;
 }
 
 a {
@@ -13,6 +12,11 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+a, p, h1, h2, h3, h4, h5, h6 {
+  padding: 0;
+  margin: 0;
 }
 
 @media (prefers-color-scheme: dark) {
